examples/test/testpolicy10365.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10365
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key34: value22
      key22: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value9
      podSelector:
        matchLabels:
          key1: value8
          key42: value3
